deployment/k8s/collectives.example.yaml
########################################################################################
#
#   Ingress
#
########################################################################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: collectives-ingress
 annotations:
    ingressClassName: nginx
    cert-manager.io/cluster-issuer: "lets-encrypt"
spec:
 ingressClassName: nginx
 tls:
 - hosts:
   - --to-be-replaced-- # The hostname of the website
   secretName: collectives-ingress-tls 
 rules:
 - host: --to-be-replaced-- # The hostname of the website
   http:
     paths:
     - backend:
         service:
           name: collectives
           port:
             number: 5000
       path: /
       pathType: Prefix
---
########################################################################################
#
#   Collectives services
#
########################################################################################
apiVersion: v1
kind: Service
metadata:
  name: collectives
  labels:
    app: collectives
spec:
  ports:
    - port: 5000
  selector:
    app: collectives
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collectives
  labels:
    app: collectives
spec:
  selector:
    matchLabels:
      app: collectives
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: collectives
        tier: frontend
    spec:
      containers:
        - image: cafannecy/collectives:latest
          name: collectives
          ports:
            - containerPort: 5000
              name: collectives
          volumeMounts:
            - name: collectives-persistent-storage
              mountPath: /app/collectives/static/uploads
      volumes:
        - name: collectives-persistent-storage
          persistentVolumeClaim:
            claimName: collective-pv-claim
---

########################################################################################
#
#   MARIADB
#
########################################################################################




#https://mariadb.org/create-statefulset-mariadb-application-in-k8s/
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
  labels:
    app: mariadb
spec:
  ports:
  - port: 3306
    name: mariadb-port
  selector:
    app: mariadb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb-sts
spec:
  serviceName: "mariadb-service"
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb
        ports:
        - containerPort: 3306
          name: mariadb-port
        volumeMounts:
        - name: datadir
          mountPath: /var/lib/mysql/
  volumeClaimTemplates:
  - metadata:
      name: datadir
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "csi-cinder-classic"
      resources:
        requests:
          storage: 300M
